# trimmer

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
config/: trimmer_config.json  video_list.json
include/: bbox.hpp  constants.hpp  draw.hpp  filter_detections.hpp  frame.hpp  trimmerio.hpp  video.hpp
scripts/: build_all.sh  build_docker.sh  build_models.sh  build_source.sh  dockerlaunch.sh  main.sh  test_zmq.sh
src/: bbox.cpp  draw.cpp  filter_detections.cpp  frame.cpp  trimmer.cpp  trimmerio.cpp  video.cpp  zmqtest.cpp
